fixed layout display issue not showing template

--- a/src/styles/4-generic/_main-wrapper.scss
+++ b/src/styles/4-generic/_main-wrapper.scss
@@ -25,6 +25,6 @@
     min-height: 100%;
 }
 
-#app {
+[data-js="app"] {
     height: 100%;
 }
